[package]
name = "telemetary"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
actix = "0.7.9"
serde = "1.0.85"
serde_json = "1.0.36"
env_logger = "0.6.0"
tokio-core = "0.1.17"
tokio-io = "0.1.11"
futures = "0.1.25"
byteorder = "1.3.0"
bytes = "0.4.11"
rand = "0.6.4"
dotenv_codegen = "0.11.0"
serde_derive = "1.0.85"
mashup = "0.1.9"
multi-map = {git ="https://github.com/vbrandl/multi-map.git", rev="12510ab"}